[gd_scene load_steps=8 format=2]

[ext_resource path="res://tudo/imagens/menu/menuPrincipalSemBotao.jpg" type="Texture" id=1]
[ext_resource path="res://tudo/Botoes/botao.png" type="Texture" id=2]
[ext_resource path="res://tudo/Botoes/botaoAoClicar.png" type="Texture" id=3]
[ext_resource path="res://tudo/Botoes/BotaoClique.png" type="Texture" id=4]
[ext_resource path="res://script/MENU.gd" type="Script" id=5]
[ext_resource path="res://tudo/fonts/BRITANIC.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[node name="MENU" type="Node2D"]
script = ExtResource( 5 )

[node name="comecar" type="Sprite" parent="."]
position = Vector2( 176, 303.5 )
scale = Vector2( 0.502778, 0.482031 )
texture = ExtResource( 1 )

[node name="botao1" type="TextureButton" parent="."]
margin_left = 92.0
margin_top = 227.0
margin_right = 267.0
margin_bottom = 277.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao1"]
margin_right = 166.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao2" type="TextureButton" parent="."]
margin_left = 93.0
margin_top = 293.0
margin_right = 268.0
margin_bottom = 343.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao2"]
margin_left = 2.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao3" type="TextureButton" parent="."]
margin_left = 92.0
margin_top = 361.0
margin_right = 267.0
margin_bottom = 411.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao3"]
margin_left = 4.0
margin_top = 4.0
margin_right = 170.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="botao4" type="TextureButton" parent="."]
margin_left = 92.0
margin_top = 435.0
margin_right = 267.0
margin_bottom = 485.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="botao4"]
margin_left = -3.0
margin_top = 5.0
margin_right = 163.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
[connection signal="pressed" from="botao2" to="." method="_on_botao2_pressed"]
[connection signal="pressed" from="botao3" to="." method="_on_botao3_pressed"]
[connection signal="pressed" from="botao4" to="." method="_on_botao4_pressed"]
